--- a/Tetris/html/doxygen_crawl.html
+++ b/Tetris/html/doxygen_crawl.html
@@ -11,6 +11,7 @@
 <a href="_audio_player_8h_source.html"/>
 <a href="_draw_manager_8h_source.html"/>
 <a href="_input_manager_8h_source.html"/>
+<a href="_input_manager_8cpp.html"/>
 <a href="class_audio_player.html"/>
 <a href="class_audio_player-members.html"/>
 <a href="class_input_manager.html"/>
@@ -20,15 +21,24 @@
 <a href="annotated.html"/>
 <a href="classes.html"/>
 <a href="hierarchy.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
 <a href="files.html"/>
 <a href="_audio_player_8h_source.html"/>
 <a href="_draw_manager_8h_source.html"/>
+<a href="_input_manager_8cpp.html"/>
 <a href="_input_manager_8h_source.html"/>
 <a href="annotated.html"/>
 <a href="class_audio_player.html"/>
 <a href="class_input_manager.html"/>
+<a href="class_input_manager.html#a6859fdf7f72ff3effbe86c87e901ecb6"/>
+<a href="class_input_manager.html#a8e049b45caee6bfda3888d6456fc4ac5"/>
 <a href="classes.html"/>
 <a href="files.html"/>
+<a href="functions.html"/>
+<a href="functions_func.html"/>
 <a href="hierarchy.html"/>
 </body>
 </html>
