--- a/Tetris/html/doxygen_crawl.html
+++ b/Tetris/html/doxygen_crawl.html
@@ -11,7 +11,10 @@
 <a href="_audio_player_8h_source.html"/>
 <a href="_draw_manager_8h_source.html"/>
 <a href="_input_manager_8h_source.html"/>
+<a href="_audio_player_8cpp.html"/>
+<a href="_audio_player_8h.html"/>
 <a href="_input_manager_8cpp.html"/>
+<a href="_input_manager_8h.html"/>
 <a href="class_audio_player.html"/>
 <a href="class_audio_player-members.html"/>
 <a href="class_input_manager.html"/>
@@ -23,15 +26,30 @@
 <a href="hierarchy.html"/>
 <a href="functions.html"/>
 <a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
 <a href="files.html"/>
-<a href="_audio_player_8h_source.html"/>
+<a href="globals.html"/>
+<a href="globals_type.html"/>
+<a href="_audio_player_8cpp.html"/>
+<a href="_audio_player_8h.html"/>
+<a href="_audio_player_8h.html#a72dbf85a307953e6b6ef8e9e4c6df895"/>
 <a href="_draw_manager_8h_source.html"/>
 <a href="_input_manager_8cpp.html"/>
-<a href="_input_manager_8h_source.html"/>
+<a href="_input_manager_8h.html"/>
 <a href="annotated.html"/>
 <a href="class_audio_player.html"/>
+<a href="class_audio_player.html#a288ee3b3a8f65f974b1b01d935689b13"/>
+<a href="class_audio_player.html#a41d5beac7ef47d2d935f17e822cbfd9f"/>
+<a href="class_audio_player.html#aa0545193648596a6e541fe964f16f902"/>
+<a href="class_audio_player.html#aaf94e574c4090c6d38b9260d236559ac"/>
+<a href="class_audio_player.html#aea0c8671decaeccb23924f3fe2f1c132"/>
 <a href="class_input_manager.html"/>
 <a href="class_input_manager.html#a6859fdf7f72ff3effbe86c87e901ecb6"/>
 <a href="class_input_manager.html#a8e049b45caee6bfda3888d6456fc4ac5"/>
@@ -39,6 +57,8 @@
 <a href="files.html"/>
 <a href="functions.html"/>
 <a href="functions_func.html"/>
+<a href="globals.html"/>
+<a href="globals_type.html"/>
 <a href="hierarchy.html"/>
 </body>
 </html>
